@@ -13,6 +13,7 @@ import org.newdawn.slick.Graphics;
 import ru.game.aurora.application.Camera;
 import ru.game.aurora.application.ResourceManager;
 import ru.game.aurora.dialog.Dialog;
+import ru.game.aurora.npc.AlienRace;
 import ru.game.aurora.player.research.ResearchProjectDesc;
 import ru.game.aurora.world.BasePositionable;
 import ru.game.aurora.world.Dungeon;
@@ -25,8 +26,7 @@ import ru.game.aurora.world.World;
  * Can contain something valuable, like resources, materials for research etc.
  * In future versions will contain enemies and location similar to planet
  */
-public class SpaceHulk extends BasePositionable implements SpaceObject
-{
+public class SpaceHulk extends BasePositionable implements SpaceObject {
     private static final long serialVersionUID = 1L;
 
     private String name;
@@ -104,7 +104,12 @@ public class SpaceHulk extends BasePositionable implements SpaceObject
     }
 
     @Override
-    public String getScanDescription() {
+    public String getScanDescription(World world) {
+        return null;
+    }
+
+    @Override
+    public AlienRace getRace() {
         return null;
     }
 
